--- a/spark_ml_taxi_trip_chicago.ipynb
+++ b/spark_ml_taxi_trip_chicago.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "This notebook aims to develop a model for predicting tips on Chicago taxi rides. The [Chicago Taxi Trips](https://data.cityofchicago.org/Transportation/Taxi-Trips/wrvz-psew), dataset is used for this purpose. Given the large size of the dataset, PySpark is employed for data processing and machine learning (**ML**) model development.\n",
         "\n",
-        "## Colunas da base utilizadas como entrada\n",
+        "## Database columns used as input\n",
         "\n",
         "The columns used as input for the developed machine learning model will be:\n",
         "* **Trip Start Timestamp** from which the trip_start_hour column will be derived.\n",
